--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <div class="hero_container">
     <h1> EKKALUX NGUYEN</h1>
-    <p> I am a UX/UI designer based in San Francisco passionate about  </p>
+    <p> I am a UX designer based in San Francisco passionate about  </p>
     <p>creating beautiful and intuitive user experience. </p>
 
     <div class="middle_button_container">
@@ -57,7 +57,7 @@
       <img src="images/ridestarter_laptop.png">
       <div class="ridestarter_text">
         <h1> Ridestarter </h1>
-        <h2> UX Research | UX Design | Brand Identity </h2>
+        <h2> <b>UX Research | UX Design | Brand Identity</b> </h2>
         <p> A crowdfunding web application for organizations and individuals
         looking to either raise funds or donate to charity bike rides. </p>
         <div class="ridestarter_button">
@@ -71,7 +71,7 @@
       <img src="images/simplebox_laptop.png">
       <div class="simplebox_text">
         <h1> Simplebox </h1>
-        <h2> UX Research | UX Design | Brand Identity </h2>
+        <h2> <b>UX Research | UX Design | Brand Identity</b> </h2>
         <p> A web application that allows users to collect information and store it in a centralized location.</p>
         <div class="simplebox_button">
           <a href="simplebox.html"><button class="button_simplebox">Case Study</button></a>
@@ -84,7 +84,7 @@
       <img src="images/more_projects/more_projects.png">
       <div class="more_projects_text">
         <h1> More Projects </h1>
-        <h2> UI Design | Brand Identity | Graphic Design </h2>
+        <h2><b> UI Design | Brand Identity | Graphic Design </b></h2>
         <p> Other projects that includes user interface design, branding, and newsletter work. </p>
         <div class="more_projects_button">
           <a href="more_projects.html"><button class="button_more">View Projects</button></a>
@@ -97,21 +97,32 @@
 <section class="about">
   <div class="about_container">
     <h1> ABOUT </h1> <hr id="hr_about"> </hr>
-    <p>Hello! I’m Ekkalux or Lux for short. I'm a UX/UI Designer based in San Francisco
-       passionate about creating simple yet user-centric design experience. I have
-       an affinity for creating products that bridge the gap between technology, education, and health.
-       I strategize design solutions in the form of user research, wireframes, prototypes, iterations through
-       usability testing, and a tad of front-end development. I also have experience with
-       designing graphic assets such as banners, flyers, newsletters, and digital prints.
-       When I'm not designing or coding, I enjoy staying
-       fit and traveling. </p>
+    <div class="about_left">
+      <h2>Hello! My name is Ekkalux or Lux for short, committed to uncovering people's stories through
+        the crafting of intuitive design solutions . . . </h2>
+
+      <p> Growing up, I have always had a deep appreciation for how the human mind works.
+        Asking questions like what makes us tick and why do we do things the way we do, I was fascinated by the
+        mystery in uncovering human behavior. The opportunity to listen, empathize, and learn inspire me to leap into the world of UX design. </p>
+
+       <p> <b>My journey to become a UX designer</b> started during my undergraduate career at UC Berkeley. I was involved
+         in many different organizations, helping to design graphic materials - prints, ads, and newsletters. But I didn’t
+         want to just design; I wanted to use my passion in design to help people with their problems and see the
+         positive effect it has upon their situation. My passion to be a UX designer grew when I stumbled across an
+         intensive UI/UX design program, Bloc. Through this program, I have equipped myself with the necessary skills to discover,
+         plan, and deliver design solutions. </p>
+
+        <p> <b>Today's machine is growing and so are we.</b> With a strong affinity for creating
+        products that bridge the gap between technology, education, and health, I hope to strategize
+        simple, yet user-centric solutions to solve complex problems. Feel free to contact me right below!
+     </div>
   </div>
 </section>
 
 <section class="contact">
   <h1> CONTACT </h1> <hr>
   <div class="contact_container">
-    <p> I am always looking to make the web better. Feel free to get in touch with me if you have
+    <p> I love to connect and meet new people. Feel free to get in touch with me if you have
       opportunities for projects or open positions!</p>
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSegqfUFqfZbNikQQFP_JDGc8hcajth3xduNM2hp5D2OuUd3BQ/viewform" target="_blank"><button class="button_touch">Get in touch</button></a>
   </div>
