--- a/ridestarter.html
+++ b/ridestarter.html
@@ -31,79 +31,91 @@
   </div>
 
   <div class="hero_container">
-  <img src="images/ridestarter/ridestarter_hero_image.png">
-  <div class="title_container">
-    <h1> RIDESTARTER </h1>
-    <p>A crowdfunding web application for organizations and individuals
-    looking to either raise funds or donate to charity bike rides.<p/>
-    <div class="arrow_down_container">
-      <i class="fa fa-arrow-circle-o-down fa-lg"></i>
+
+    <div class="hero_container_img">
+      <img src="images/ridestarter/ridestarter_hero_image.png">
+    </div>
+
+    <div class="title_container">
+      <h1> RIDESTARTER </h1>
+      <p>A crowdfunding web application for organizations and individuals
+        looking to either raise funds or donate to charity bike rides.</p>
     </div>
   </div>
-  </div>
+
 </section>
 
 <nav class="navigation">
-  <h2 id="summary"> SUMMARY </h2>
-  <h2 id="solution"> SOLUTION </h2>
-  <h2 id="research"> RESEARCHING THE CHALLENGES </h2>
-  <h2 id="design"> DESIGN CHOICES</h2>
-  <h2 id="implementation"> IMPLEMENTATION </h2>
-  <h2 id="results"> RESULTS </h2>
+  <h2 id="summary"> OVERVIEW </h2>
+  <h2 id="research"> RESEARCH </h2>
+  <h2 id="design"> DESIGN </h2>
+  <h2 id="research"> USABILITY TESTING</h2>
+  <h2 id="design"> CONCLUSION </h2>
 </nav>
 
 <section class="summary">
   <div class="summary_container">
-    <h1> SUMMARY </h1> <hr>
+    <h1> <span class="underline_black">SUMMARY</span> </h1>
     <p> Ridestarter is a crowdfunding website application for organizations and individuals looking to
       either raise funds or donate to charity bike rides across the world. Users can choose to create a bike
       campaign, supporting specific causes or browse through the different bike charities that are offered.</p>
   </div>
 </section>
 
-<section class="solution">
-  <div class="solution_container">
-    <h1> SOLUTION</h1>
-    <p> There are a lot of existing crowd-sourced fundraising web applications such as Kickstarter,
+<section class="solution_problem">
+  <div class="problem_container">
+    <h1><span class="underline_black"> PROBLEM </span></h1>
+    <p>There are a lot of existing crowd-sourced fundraising web applications such as Kickstarter,
       GoFundme, and Indiegogo. However, many of these applications cater towards personal or general projects. When pertaining to
-      charity bike rides, a well-designed solution hasn't been created.
-      The goal of Ridestarter is to centralize charity bike rides across the world and allow users to crowd-source
-      for ride projects. In addition to attracting the cyclist community, Ridestarter allows donors and fundraisers to come
-      together in supporting charity rides for causes they care about.   </p>
-
+      charity bike rides, a well-designed solution hasn't been created. </p>
   </div>
+
+  <div class="solution_container">
+    <h1> <span class="underline_black">SOLUTION</span></h1>
+    <p>The goal of Ridestarter is to centralize charity bike rides across the world and allow users to crowd-source
+      for ride projects. In addition to attracting the cyclist community, Ridestarter allows donors and fundraisers to come
+      together in supporting charity rides for causes they care about. </p>
+  </div>
+
 </section>
 
 <section class="research">
   <div class="research_container">
-    <h1> RESEARCHING THE CHALLENGES </h1> <hr>
+    <h1> <span class="underline_black">RESEARCHING THE CHALLENGES </span> </h1>
 
     <div class="survey_findings"> <b>Survey Findings</b>
       <p> At this initial stage, it was important to gain a better understanding of users' behavior of
         donating to a charity or spearheading a fundraiser. The survey was aimed towards a group of people
       who have made donations, created fundraiser projects, participated in charity bike ride and also users
       who have neither fundraised or donated. These results were important in deciding not only the features of Ridestarter, but also what
-        is necessary in order to create a successful crowdfunding application. </p>
-
-      <b><p>1. 50% of respondents felt that the progress bar and fundraising are the most important
-      features. </p>
-      <p>2. Some respondents felt the process of creating an account and going
-      through the donation flow are a hassle that takes a toll of their time. </p>
-      <p>3. People usually don’t donate because they are sketpical of donation sites -
-      where the money is going to and how much of an impact they are making. Another
-      popular response is that they feel that their donation is too small to make a difference. </p> </b>
+        is necessary in order to create a successful crowdfunding application.  <a href="https://docs.google.com/spreadsheets/d/1I71riCTMi-fcfzlis8xqgAgljlUzt9PmAgFs3RwU1fQ/edit?usp=sharing" target="_blank">
+          Click here to view the survey responses </a> </p>
+      <div class="highlights">
+        <ul>
+          <li>50% of respondents felt that the progress bar and fundraising are the most important
+          features. </li>
+          <li>Some respondents felt the process of creating an account and going
+          through the donation flow are a hassle that takes a toll of their time. </li>
+          <li>People usually don’t donate because they are sketpical of donation sites -
+          where the money is going to and how much of an impact they are making. Another
+          popular response is that they feel that their donation is too small to make a difference. </li>
+          <li> When creating a campaign, 67% of respondents say that sharing their campaign through social media or email is the most
+            important.
+        </ul>
+      </div>
 
       <p>In addition to the survey, I also conducted user interviews on
       people who have been on charity bike rides and have experienced through the fundraising process. These are my findings: </p>
 
-      <b><p>1. Fundraisers generally have to reach out to the organization that they’re
-        supporting to host the fundraising site. This makes it hard to gain traction from
-        the cyclist community to contribute fundings.  </p>
-      <p>2. One interesting observation was that people are more likely to donate or feel more
-        comfortable fundraising if the project entice challenges rather than just "asking for money". </p> </b>
-
-      <a href="https://docs.google.com/spreadsheets/d/1I71riCTMi-fcfzlis8xqgAgljlUzt9PmAgFs3RwU1fQ/edit?usp=sharing" target="_blank">
-          Click here to view the survey responses </a>
+      <div class="highlights">
+        <ul>
+          <li> Fundraisers generally have to reach out to the organization that they’re
+            supporting to host the fundraising site. This makes it hard to gain traction from
+            the cyclist community to contribute fundings.  </li>
+          <li> One interesting observation was that people are more likely to donate or feel more
+            comfortable fundraising if the project entice challenges rather than just "asking for money". </li>
+        </ul>
+      </div>
       <img src="images/ridestarter/survey.png">
 
 
@@ -114,15 +126,14 @@
         they operate, their strengths/weaknesses, features, and differentiators. Based from the analysis, it was apparent that almost all crowdfunding sites strive for similiar
         features - progress meter and donation goals. Because Ridestarter is a charity bike crowdfunding source,
         it's important that the application contains features unique to charity bike rides as well as some of the
-          important crowdfunding elements. </p>
+          important crowdfunding elements.<a href="https://docs.google.com/spreadsheets/d/1f1FW3b75Uf-R_5KEUwpLFI_N9QV515_YGSm9SxUTedM/edit?usp=sharing" target="_blank">
+          You can take a closer look of the competitive analysis here. </a> </p>
 
-      <a href="https://docs.google.com/spreadsheets/d/1f1FW3b75Uf-R_5KEUwpLFI_N9QV515_YGSm9SxUTedM/edit?usp=sharing" target="_blank">
-      You can take a closer look of the competitive analysis here. </a>
       <img src="images/ridestarter/competitive_analysis.png" >
     </div>
 
     <div class="personas"> <b>Personas </b>
-      <p>After conducting four user interviews and compiling the survey, I created three
+      <p>After conducting user interviews and compiling the survey, I created three
         user personas to reflect both the fundraiser and donor perspective. My goal was to develop
       empathy for the users and how they will interact with the application. </p>
       <img src="images/ridestarter/luke.png">
@@ -135,14 +146,15 @@
 
   <section class="design_choices">
     <div class="design_container">
-      <h1> RIDING THROUGH THE DESIGN CHOICES </h1> <hr>
+      <h1> <span class="underline_black">RIDING THROUGH THE DESIGN CHOICES </span> </h1>
 
       <div class="user_flow"> <b>User Flow</b>
         <p>Based on the user research, I finalized four user stories that I believe
           are important for users to navigate through their goals in Ridestarter:
-          <b>Creating an Account, Browsing a Charity, Donating to a Charity, and Creating a Campaign.</b> </p>
-        <a href="https://drive.google.com/file/d/0B0bktw2AN4LKaTg4d2pSb19PdWM/view?usp=sharing">
-          Click here to view the online user flow </a>
+          Creating an Account, Browsing a Charity, Donating to a Charity, and Creating a Campaign. This detaied information
+        architecture serves as a template for the creation of the site. <a href="https://drive.google.com/file/d/0B0bktw2AN4LKaTg4d2pSb19PdWM/view?usp=sharing">
+          Click here to view the online user flow. </a>  </p>
+
 
         <img src="images/ridestarter/user_flow.png">
       </div>
@@ -172,23 +184,32 @@
 
 <section class="implementation">
   <div class="implement_container">
-    <h1> GEARING THE DESIGN IMPLEMENTATION </h1> <hr>
+    <h1> <span class="underline_black">GEARING THE DESIGN IMPLEMENTATION </span> </h1>
     <div class="user_testing"> <b>User Testing</b>
       <p> I conducted a <b>contextual interview </b> on four different users to get feedback on the clickable
         prototypes in InVision. These are some of the most important guiding questions that I asked
         during the testing as they went through the website: </p>
-      <p>1. Look at the homepage. What do you think this website is about? </p>
-      <p>2. Find a challenge and make a donation. </p>
-      <p>3. How do you feel about the checkout process? Do you feel it is intuitive and trustworthy? </p>
+      <div class="highlights">
+        <ul>
+          <li> Look at the homepage. What do you think this website is about? </li>
+          <li> Find a charity project and make a donation. </li>
+          <li> How do you feel about the checkout process? Do you feel it is intuitive and trustworthy? </li>
+      </ul>
+    </div>
+
+    <div class="highlights">
       <p> <b>Main critiques from the testing</b> </p>
-      <p>1. User #1 pointed out that when he wanted to navigate back to
-        My Account from the Creating a Fundraiser page, there were no option to do that unless you
-         click on My Account on the navigation bar. <b> I added a back button both on the Creating a
-         Fundraiser page and Guest Checkout page. </b> </p>
-      <p>2. An interesting observation was that user #1 wanted to donate immediately
-        right after discovering it, but the click directs him to the description page instead.
-        <b>I took this input and added a donate button under each projects in both the homepage
-        and the discover page. </b></p>
+      <ul>
+        <li> Some users pointed out that when they wanted to navigate back to
+          My Account from the Creating a Fundraiser page, there were no option to do that unless you
+          click on My Account on the navigation bar. <b>I added a back button both on the Creating a
+          Fundraiser page and Guest Checkout page. </b> </li>
+         <li> An interesting observation was that user #1 wanted to donate immediately
+           right after discovering it, but the click directs him to the description page instead.
+           <b>I took this input and added a donate button under each projects in both the homepage
+           and the discover page.</b> </li>
+        </ul>
+    </div>
     </div>
   </div>
 
@@ -199,45 +220,6 @@
        are captivating and trustworthy.”</p>
   </div>
 
-  <div class="special_features"> <b>Special Features </b>
-    <div class="charity_page_container">
-      <img src="images/ridestarter/charity_page.png">
-      <div class="charity_page_text">
-        <b>Designing an Intuitive Charity Page</b>
-        <p>The “interested in riding” contact reinforces the goal of the application to bridge
-        the gap between donating and inspiring potential riders to participate in the challenge.
-        During user testing, one of the users pointed out that it would be useful to link the organization's official site where the funds
-        are going to. This allows user to conveniently understand where exactly the donated funds are contributing.  </p>
-        <p>Based on the user research, majority of participants think that the progress bar
-        and fundraiser goal are the most important crowdfunding features. To accomodate this finding,
-        I decided to emphasize the progress bar by making it relatively larger. </p>
-        <p>During the in-person interview process, most users thought that the donor
-        list would be useful to include because they usually don’t know how much to
-        donate. For some interviewees, being featured as Top Donors add an
-        incentive for them to make a donation. </p>
-       </div>
-    </div>
-
-    <div class="guest_checkout_container">
-      <img src="images/ridestarter/guest_checkout.png">
-      <div class="guest_checkout_text"> <b>Improving the Donation Process </b>
-        <p>According to my research, some respondents felt that the long checkout
-         process hinders their motivation to donate. In pursuance of getting users
-         to quickly reach the end-stage of the donation process,<b> Ridestarter
-         allows users to donate as a guest, </b> with no commitments to making an account. </p>
-      </div>
-    </div>
-
-    <div class="filter_container">
-      <img src="images/ridestarter/filter.png">
-      <div class="filter_text"> <b>Discovering the Filter System</b>
-        <p>Having a filter system is important to search for different types of
-          charities. Users are able to filter through category, location, and the
-          total mileage of the challenge. Additionally, they can sort through the
-          challenge cards by oldest to newest, alphabetical order, and the completion rate.
-          This feature connects users to what they are specifically looking for when searching for a ride project. </p>
-      </div>
-    </div>
 
   </div>
 
@@ -245,8 +227,8 @@
 
 <section class="final">
   <div class="final_container">
-    <h1>REACHING OUR FINAL DESTINATION</h1> <hr>
-    <b>High Fidelity Mockups </b> 
+    <h1><span class="underline_black">REACHING OUR FINAL DESTINATION</span></h1>
+      High Fidelity Mockups
     <p>The solution from the preliminary user research and usability testing all
       resulted in a responsive and streamlined crowdfunding charity ride web application.
       I designed 24 high-fidelity wireframes in Sketch; below are some of the highlighted pages:</p>
